# urban-intelligence-pipeline

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cli.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: docker-compose.yml
airflow/dags/: urban_pipeline_dag.py
dbt/urban_pipeline_dbt/: README.md  dbt_project.yml  profiles.yml
dbt/urban_pipeline_dbt/analyses/: data_freshness.sql  weather_impact_summary.sql
dbt/urban_pipeline_dbt/models/marts/: _marts.yml  dim_dates.sql  dim_locations.sql  fct_trips.sql
dbt/urban_pipeline_dbt/models/staging/: _sources.yml  stg_trips.sql
dbt/urban_pipeline_dbt/snapshots/: dim_locations_snapshot.sql
dbt/urban_pipeline_dbt/tests/: dropoff_after_pickup.sql  no_future_trips.sql  positive_fares.sql
docs/: ADR-001-platform-choices.md
ingestion/batch/: load_to_bigquery.py  taxi_ingestion.py  weather_ingestion.py
notebooks/: 01_taxi_ingestion_walkthrough.ipynb
notebooks/.ipynb_checkpoints/: 01_taxi_ingestion_walkthrough-checkpoint.ipynb
scripts/: backfill.py  transform_backfill.sh
terraform/: apis.tf  bigquery.tf  bigquery_tables.tf  gcs.tf  iam.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/schemas/: taxi_trips.json  taxi_trips_enriched.json  weather_hourly.json
tests/: test_backfill.py  test_ingestion.py  test_ingestion_paths.py
transform/: spark_transform.py
